logs/mobility/build.make.071.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void targetHandler(const ConstPtr&)’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:868:5: error: ‘seenEnoughCenterTags’ was not declared in this scope
 if (seenEnoughCenterTags)
     ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
